Make `loadPropertiesFromFile` public, add extensive color key constants to `ColorTheme`, reorganize `CellAttributes` initialization, improve theme parsing with dedicated methods, and apply formatting and efficiency updates.